--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -126,15 +126,15 @@ rule_2_3_6_3: true
 rule_2_3_6_4: true
 rule_2_3_6_5: true
 rule_2_3_6_6: true
-rule_2_3_7_1: true
-rule_2_3_7_2: true
-rule_2_3_7_3: true
-rule_2_3_7_4: true
-rule_2_3_7_5: true
-rule_2_3_7_6: true
-rule_2_3_7_7: true
-rule_2_3_7_8: true
-rule_2_3_7_9: true
+rule_2_3_7_1: false
+rule_2_3_7_2: false
+rule_2_3_7_3: false
+rule_2_3_7_4: false
+rule_2_3_7_5: false
+rule_2_3_7_6: false
+rule_2_3_7_7: false
+rule_2_3_7_8: false
+rule_2_3_7_9: false
 rule_2_3_8_1: true
 rule_2_3_8_2: true
 rule_2_3_8_3: true
