--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -107,12 +107,12 @@ rule_2_2_45: true
 rule_2_2_46: true
 rule_2_2_47: true
 rule_2_2_48: true
-rule_2_3_1_1: true
-rule_2_3_1_2: true
-rule_2_3_1_3: true
-rule_2_3_1_4: true
-rule_2_3_1_5: true
-rule_2_3_1_6: true
+rule_2_3_1_1: false
+rule_2_3_1_2: false
+rule_2_3_1_3: false
+rule_2_3_1_4: false
+rule_2_3_1_5: false
+rule_2_3_1_6: false
 rule_2_3_2_1: true
 rule_2_3_2_2: true
 rule_2_3_4_1: true
